--add-modules=jdk.internal.vm.ci implies -XX:+EnableJVMCI