@@ -169,7 +169,7 @@ public class TestHotSpotJVMCIRuntime {
         for (String name : names) {
             ProcessBuilder pb = ProcessTools.createLimitedTestJavaProcessBuilder(
                 "-XX:+UnlockExperimentalVMOptions",
-                "-XX:+EnableJVMCI",
+                "--add-modules=jdk.internal.vm.ci",
                 "-XX:-UseJVMCICompiler",
                 "-XX:+UseJVMCINativeLibrary",
                 "-Dtest.jvmci.forceEnomemOnLibjvmciInit=true",
